tinyauth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tinyauth
  namespace: tinyauth
spec:
  forwardAuth:
    address: http://tinyauth.tinyauth.svc.cluster.local:3000/api/auth/traefik
